fix gradients on firefox

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 html{
 	background: linear-gradient(-180deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 35%, rgba(0,130,151,0.5) 100%);
 	background: -ms-linear-gradient(-180deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 35%, rgba(0,130,151,0.5) 100%);
-	background: -moz-linear-gradient(-180deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 35%, rgba(0,130,151,0.5) 100%);
+	background: -moz-linear-gradient(-90deg, rgba(245,245,245,1) 0%, rgba(245,245,245,1) 35%, rgba(0,130,151,0.5) 100%);
 }
 hr{
 	background: #D4EAED;
@@ -88,7 +88,7 @@ button{
 	margin-top: 5px;
 	background: rgb(0,130,151,0.1);
 	background: linear-gradient(90deg, rgba(0,130,151,0.1) 0%, #D4EAED 50%, #D4EAED 99%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, #D4EAED 50%, #D4EAED 99%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(0,130,151,0.1) 0%, #D4EAED 50%, #D4EAED 99%, rgba(0,130,151,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, #D4EAED 50%, #D4EAED 99%, rgba(0,130,151,0) 100%);
 	border-radius: 0px;
 	text-decoration: none;
@@ -109,7 +109,7 @@ a::after, button::after{
 	background: rgb(0,130,151);
 	background: linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
 	background:  -ms-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
 	opacity: 0;
 	transition: 0.5s;
 }
@@ -250,7 +250,7 @@ canvas{
 
 .interactive-map .text{
 	background: linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 	position: absolute;
 	top: 18px;
@@ -313,7 +313,7 @@ nav#desktop-nav{
 	word-break: break-all;
 	background: rgba(245,245,245,0.5);
 	background: linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
 }
 nav#desktop-nav input[type="text"]{
@@ -521,7 +521,7 @@ img.magnifying-glass, img.globe{
 	margin-top: 5px;
 	background: rgb(245,245,245,0.5);
 	background: linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 10%, rgba(245,245,245,0.5088629201680672) 90%, rgba(245,245,245,0) 100%);	
 	border-radius: 0px;
 	text-decoration: none;
@@ -539,7 +539,7 @@ img.magnifying-glass, img.globe{
 	content: " ";
 	background: rgb(245,245,245);
 	background: linear-gradient(90deg, rgba(245,245,245,0.9) 0%, rgba(245,245,245,0.9) 5%, rgba(245,245,245,0.5088629201680672) 95%, rgba(245,245,245,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(245,245,245,0.9) 0%, rgba(245,245,245,0.9) 5%, rgba(245,245,245,0.5088629201680672) 95%, rgba(245,245,245,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(245,245,245,0.9) 0%, rgba(245,245,245,0.9) 5%, rgba(245,245,245,0.5088629201680672) 95%, rgba(245,245,245,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(245,245,245,0.9) 0%, rgba(245,245,245,0.9) 5%, rgba(245,245,245,0.5088629201680672) 95%, rgba(245,245,245,0) 100%);
 	opacity: 0;
 	transition: 0.5s;
@@ -692,7 +692,7 @@ button.disabled span::after{
 	transition: 0.2s;
 	position: relative;
 	background: linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(212,234,237,0.9) 0%, rgba(212,234,237,0.9) 5%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 	flex-basis: calc(100% - 50px);
 	padding: 20px;
@@ -701,7 +701,7 @@ button.disabled span::after{
 }
 .opp:hover{
 	background: linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 50%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 50%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 50%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 50%, rgba(212,234,237,0.9) 99%, rgba(0,130,151,0) 100%);
 }
 .opp h2{
@@ -725,7 +725,7 @@ button.disabled span::after{
 	color: #BF0D3E;
 	text-decoration: none;
 	background: linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 5%, rgba(245,245,245,0.5) 95%, rgba(245,245,245,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 5%, rgba(245,245,245,0.5) 95%, rgba(245,245,245,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 5%, rgba(245,245,245,0.5) 95%, rgba(245,245,245,0) 100%);
 	background: -ms-linear-gradient(90deg, rgba(245,245,245,0.5) 0%, rgba(245,245,245,0.5) 5%, rgba(245,245,245,0.5) 95%, rgba(245,245,245,0) 100%);
 }
 .funding-opportunities-wrapper{
@@ -835,7 +835,7 @@ section.funding{
 	background: #f5f5f5;
 	background: linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
 	background:  -ms-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
-	background: -moz-linear-gradient(90deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
+	background: -moz-linear-gradient(0deg, rgba(0,130,151,0.1) 0%, rgba(0,130,151,0.1) 5%, rgba(0,130,151,0.1) 95%, rgba(0,130,151,0) 100%);
 	padding: 2px 8px;
 	-webkit-appearance: menulist;
   margin:  10px 2px;
